src/content/ccip/api-reference/v1.5.0/index.mdx
---
section: ccip
date: Last Modified
title: "CCIP v1.5.0 API Reference"
metadata:
  description: "API reference documentation for Chainlink CCIP v1.5.0. Includes core components, token pools, registry components, and error handling for cross-chain messaging and token transfers."
  canonical: "/ccip/api-reference/v1.5.1/"
isIndex: true
---

import { Aside } from "@components"
import CcipCommon from "@features/ccip/CcipCommon.astro"

<CcipCommon callout="importCCIPPackage150" />

<Aside type="note">
  You are viewing API documentation for CCIP v1.5.0. For the latest version (v1.5.1), see the [v1.5.1
  documentation](/ccip/api-reference/v1.5.1/).
</Aside>

## API References

### Core Components

- [Client](/ccip/api-reference/v1.5.0/client) - Library providing structs and types for building CCIP messages
- [CCIPReceiver](/ccip/api-reference/v1.5.0/ccip-receiver) - Base contract for receiving CCIP messages
- [IRouterClient](/ccip/api-reference/v1.5.0/i-router-client) - Interface for sending messages through CCIP
- [Pool](/ccip/api-reference/v1.5.0/pool) - Library providing token pool functions for cross-chain operations

### Token Pools

- [TokenPool](/ccip/api-reference/v1.5.0/token-pool) - Base abstract class defining common functionality for all token pools
- [BurnMintTokenPoolAbstract](/ccip/api-reference/v1.5.0/burn-mint-token-pool-abstract) - Abstract contract for burn/mint token handling
- [BurnMintTokenPool](/ccip/api-reference/v1.5.0/burn-mint-token-pool) - Implementation using `burn(amount)` for token burning
- [BurnFromMintTokenPool](/ccip/api-reference/v1.5.0/burn-from-mint-token-pool) - Implementation using `burnFrom(address, amount)` for token burning
- [LockReleaseTokenPool](/ccip/api-reference/v1.5.0/lock-release-token-pool) - Implementation for locking and releasing tokens on their native chain

### Registry Components

- [TokenAdminRegistry](/ccip/api-reference/v1.5.0/token-admin-registry) - Contract for storing token pool configurations
- [RegistryModuleOwnerCustom](/ccip/api-reference/v1.5.0/registry-module-owner-custom) - Registry module for token admin registration

### Error Handling

- [Errors](/ccip/api-reference/v1.5.0/errors) - Comprehensive list of CCIP error codes and their descriptions
