src/content/ccip/api-reference/v1.5.1/index.mdx
---
section: ccip
date: Last Modified
title: "CCIP v1.5.1 API Reference"
metadata:
  description: "API reference documentation for Chainlink CCIP v1.5.1. Includes core components, token pools, registry components, and error handling for cross-chain interoperability."
---

import { Aside } from "@components"
import CcipCommon from "@features/ccip/CcipCommon.astro"

<CcipCommon callout="importCCIPPackage151" />

<Aside type="note">You are viewing API documentation for CCIP v1.5.1, which is the latest version.</Aside>

## API References

### Core Components

- [CCIPReceiver](/ccip/api-reference/v1.5.1/ccip-receiver) - Base contract for receiving CCIP messages
- [Client](/ccip/api-reference/v1.5.1/client) - Library providing structs and types for building CCIP messages
- [IRouterClient](/ccip/api-reference/v1.5.1/i-router-client) - Interface for sending messages through CCIP
- [Pool](/ccip/api-reference/v1.5.1/pool) - Library providing token pool functions for cross-chain operations
- [RateLimiter](/ccip/api-reference/v1.5.1/rate-limiter) - Contract for managing rate limits on token transfers
- [TypeAndVersion](/ccip/api-reference/v1.5.1/i-type-and-version) - Interface for contract versioning

### Token Pools

- [BurnFromMintTokenPool](/ccip/api-reference/v1.5.1/burn-from-mint-token-pool) - Implementation using `burnFrom(address, amount)` for token burning
- [BurnMintERC20](/ccip/api-reference/v1.5.1/burn-mint-erc20) - Implementation for burning and minting ERC20 tokens
- [BurnMintTokenPool](/ccip/api-reference/v1.5.1/burn-mint-token-pool) - Implementation using `burn(amount)` for token burning
- [BurnMintTokenPoolAbstract](/ccip/api-reference/v1.5.1/burn-mint-token-pool-abstract) - Abstract contract for burn/mint token handling
- [LockReleaseTokenPool](/ccip/api-reference/v1.5.1/lock-release-token-pool) - Implementation for locking and releasing tokens on their native chain
- [TokenPool](/ccip/api-reference/v1.5.1/token-pool) - Base abstract class defining common functionality for all token pools

### Access Control

- [Ownable2Step](/ccip/api-reference/v1.5.1/ownable-2-step) - Base contract implementing secure two-step ownership transfer
- [Ownable2StepMsgSender](/ccip/api-reference/v1.5.1/ownable-2-step-msg-sender) - Extension of Ownable2Step that sets msg.sender as initial owner

### Registry Components

- [RegistryModuleOwnerCustom](/ccip/api-reference/v1.5.1/registry-module-owner-custom) - Registry module for token admin registration
- [TokenAdminRegistry](/ccip/api-reference/v1.5.1/token-admin-registry) - Contract for storing token pool configurations

### Error Handling

- [Errors](/ccip/api-reference/v1.5.1/errors) - Comprehensive list of CCIP error codes and their descriptions
